--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
     "type_traits": "cpp",
     "xlocnum": "cpp",
     "xtr1common": "cpp",
-    "xutility": "cpp"
+    "xutility": "cpp",
+    "unordered_map": "cpp",
+    "xstring": "cpp"
   }
 }
