--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "xtr1common": "cpp",
     "xutility": "cpp",
     "unordered_map": "cpp",
-    "xstring": "cpp"
+    "xstring": "cpp",
+    "utility": "cpp"
   }
 }
